# discord-voice-message-uploader

./: CHANGES.md  Cargo.toml  README.md  hijack.bash
.github/workflows/: build.yml
src/: cli_main.rs  gui_main.rs  main.rs  messenger.rs
