[package]
name = "hijack-discord-voice-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/cli_main.rs"

[[bin]]
name = "gui"
path = "src/gui_main.rs"

[dependencies]
http =			"1.0"
hound =			"3.5.1"
tokio =			{ version = "1", features = ["full"] }
reqwest =		"0.11"
serde_json =	"1.0.114"
lofty =			"0.19.2"
gtk4 =			"0.8.2"
