[package]
name = "hijack-discord-voice-messages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/cli_main.rs"

[dependencies]
http =			"1.0"
hound =			"3.5.1"
tokio =			{ version = "1", features = ["full"] }
reqwest =		{ version = "0.12.4", features = ["stream"] }
serde_json =	"1.0.114"
lofty =			"0.19.2"
indicatif =		"0.17.8"
tokio-util =	"0.7.11"
async-stream =	"0.3.5"
futures-util =	"0.3.30"
console = "0.15.8"
